# AI-Video-Studio

./: .env.example  .gitignore  README.md  pyproject.toml
assets/: README.md
automation/: __init__.py  pipeline.py  step.py
automation/steps/: __init__.py  export.py  generate_assets.py  generate_prompts.py  generate_script.py  import_to_editor.py  render.py  upload.py
characters/: README.md
config/: automation.yaml  logging.yaml  paths.yaml  providers.yaml  render_settings.yaml  settings.yaml  video_settings.yaml
core/: __init__.py  character_repository.py  cli.py  config.py  episode_generator.py  episode_repository.py  frontmatter.py  logging_setup.py  prompt_library.py  utils.py
core/models/: common.py  (+4 more)
docs/: architecture.md  coding_standards.md  folder_structure.md  getting_started.md  roadmap.md
editor/: __init__.py  base.py  davinci.py  ffmpeg.py  remotion.py
episodes/: README.md
image/: __init__.py  base.py  flux.py  gpt_image.py
logs/: README.md
music/: README.md
storage/: __init__.py  base.py  local.py
templates/: character_template.yaml  checklist_template.md  episode_template.yaml  prompt_record_template.yaml  prompt_template.yaml  script_template.md
tests/: test_character_repository.py  test_config.py  test_episode_generator.py  test_episode_repository.py  test_frontmatter.py  test_prompt_library.py  test_prompt_record.py  test_providers.py
upload/: __init__.py  base.py  tiktok.py  youtube.py
video/: __init__.py  base.py  kling.py  runway.py  veo.py
voice/: __init__.py  base.py  cartesia.py  elevenlabs.py
voices/: README.md
(+6 files in other folders)
