[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-shorts-studio"
version = "0.1.0"
description = "AI-powered production studio for YouTube Shorts and TikTok — episode workspaces, a prompt library, and a swappable provider layer for editing/video/image/voice/upload/storage."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = [
    "core",
    "core.models",
    "automation",
    "automation.steps",
    "editor",
    "video",
    "image",
    "voice",
    "upload",
    "storage",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
